<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mag10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/card1"
            android:text="@string/guideline"
            android:textColor="@color/white"
            android:padding="16dp"
            android:textAllCaps="false"/>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="12dp"
    android:layout_margin="12dp"
    tools:context="com.example.covid19.updates">
    <TextView
        style="@style/textbox"
        android:text="@string/citystats"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/distupdated"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textColor="@color/lightgray"
        android:layout_gravity="end"
        style="@style/card2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
        <EditText
            android:id="@+id/stateedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stateedit"
            android:inputType="text"/>
        <EditText
            android:id="@+id/distedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cityedit"
            android:inputType="text"/></LinearLayout>

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/LinearlCard"
            android:background="@drawable/card">
            <TextView
                style="@style/card1"
                android:text="@string/confirmed"/>

            <TextView
                android:id="@+id/distconfirmed"
                style="@style/card2"
                android:textColor="@color/orange"/>
            <TextView
                android:id="@+id/distdelconfirmed"
                style="@style/card2"
                android:textColor="@color/orange"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="normal"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearlCard"
            android:background="@drawable/card">
            <TextView
                style="@style/card1"
                android:text="@string/active"/>

            <TextView
                android:id="@+id/distactive"
                style="@style/card2"
                android:textColor="@color/mag4"/>
            <TextView
                android:id="@+id/distdelactive"
                style="@style/card2"
                android:textColor="@color/mag4"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="normal"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/deathll"
            style="@style/LinearlCard"
            android:background="@drawable/card">
            <TextView
                style="@style/card1"
                android:text="@string/deaths"/>

            <TextView
                android:id="@+id/distdeath"
                android:textColor="@color/colorPrimaryDark"
                style="@style/card2"/>
            <TextView
                android:id="@+id/distdeldeath"
                style="@style/card2"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="normal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/recoveredll"
            style="@style/LinearlCard"
            android:background="@drawable/card">
            <TextView
                style="@style/card1"
                android:text="@string/recovered"/>

            <TextView
                android:id="@+id/distrecovered"
                android:textColor="@color/green"
                style="@style/card2"/>
            <TextView
                android:id="@+id/distdelrecovered"
                style="@style/card2"
                android:textColor="@color/green"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="normal"/>
        </LinearLayout>



    </LinearLayout>
</LinearLayout>
    </LinearLayout>
</ScrollView>
