<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/infocl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".info"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/corotext"
        style="@style/card2"
        android:text="@string/coronavirus"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="12dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/mag10"/>
    <TextView
        android:id="@+id/infotext"
        style="@style/textbox"
        android:text="@string/infotext1"
        android:gravity="start"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/corotext"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/covidtext"
        style="@style/card2"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="12dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/infotext"
        android:textColor="@color/mag10"/>
    <TextView
        android:id="@+id/infotext2"
        style="@style/textbox"
        android:text="@string/infotext2"
        android:gravity="start"
        android:textColor="@color/gray"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/covidtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout></ScrollView>